Added regulation table
Still working to get longtable to split across pages.

--- a/7_Tables.Rmd
+++ b/7_Tables.Rmd
@@ -1,15 +1,50 @@
 
 <!-- ====================================================================== -->
-  <!-- ****************************            ****************************** --> 
-  <!-- ****************************BEGIN TABLES****************************** --> 
-  <!-- ****************************             ***************************** --> 
-  <!-- ======================================================================--> 
+<!-- ****************************            ****************************** --> 
+<!-- ****************************BEGIN TABLES****************************** --> 
+<!-- ****************************             ***************************** --> 
+<!-- ======================================================================--> 
   
 #Tables
-  
-  <!-- ********************************************************************** --> 
-  <!-- *********************Commercial landings TABLES*********************** --> 
-  <!-- ********************************************************************** --> 
+
+<!-- ********************************************************************** --> 
+<!-- ********************** History of Regulations ************************ --> 
+<!-- ********************************************************************** --> 
+```{r, results = 'asis'}
+ Regs = read.csv('./txt_files/Regulations.csv')
+
+ Regs.table  = xtable(Regs, 
+                      caption = c('West Coast history of regulations.'),                                                   
+                     label = 'tab:Regs',
+                      digits = 0)    
+
+# Add alignment  
+align(Regs.table) = c('lp', #'lccl')
+                       '>{\\centering}p{.75in}',
+                       '>{\\centering}p{.75in}',
+                       '>{\\raggedright}p{4.25in}')
+
+
+print(Regs.table,
+      include.rownames=FALSE,
+      caption.placement='top',
+      sanitize.text.function = function(x){x})
+
+#Print regulations table
+#print(Regs.table, 
+#      include.rownames = FALSE, 
+#      caption.placement = 'top',
+#      tabular.environment = 'longtable', 
+#       align=TRUE, 
+#      floating = FALSE, 
+#      add.to.row = list(pos = list(0), 
+#                        command = '\\hline \\endhead '))
+
+```
+
+<!-- ********************************************************************** --> 
+<!-- *********************Commercial landings TABLES*********************** --> 
+<!-- ********************************************************************** --> 
 ```{r, results = 'asis'}
 Catch_AllYrs = read.csv('./txt_files/POP2017_PacFIN_catch_forExpansion.csv')
 Catch_AllYrs = Catch_AllYrs[, -1]
@@ -133,10 +168,10 @@ print(Catch_AllYrs,
 
 ``` 
 <!-- ********************************************************************** --> 
-  <!-- *******************Commercial Discards TABLES************************* --> 
-  <!-- ********************************************************************** --> 
+<!-- *******************Commercial Discards TABLES************************* --> 
+<!-- ********************************************************************** --> 
   
-  ```{r, results = 'asis'}
+```{r, results = 'asis'}
 #Index_summary = read.csv('./txt_files/Index_summary.csv')
 # Pull in model values from mod1
 Discard = cbind(mod1$discard$Yr, 
@@ -176,10 +211,10 @@ print(Discard.table,
 
 
 <!-- ********************************************************************** -->
-  <!--  ************Fishery dependent biological sampling TABLES************* -->
-  <!-- ********************************************************************** -->
+<!--  ************Fishery dependent biological sampling TABLES************* -->
+<!-- ********************************************************************** -->
   
-  ```{r, results = 'asis'}
+```{r, results = 'asis'}
 Fish_Length = read.csv('./txt_files/FisheryLength_N.csv')
 # manually split table across pages because I could not get longtable to work
 Fish_Length = Fish_Length[1:35, ]
@@ -255,8 +290,8 @@ pander(Fish_Length, caption = "Summary of commercial fishery length samples used
 
 ```-->
   
-  
-  ```{r, results = 'asis'}
+
+```{r, results = 'asis'}
 Fish_Length = read.csv('./txt_files/POPLengthSampleSize.csv')
 colnames(Fish_Length) = c('Year',
                           'Tows',
@@ -544,13 +579,13 @@ print(Fish_Length.table,
 ```
 
 <!-- ********************************************************************** -->
-  <!-- ***********************Survey Indices Table*************************** --> 
-  <!-- ********************************************************************** -->
+<!-- ***********************Survey Indices Table*************************** --> 
+<!-- ********************************************************************** -->
   
-  <!-- ***********Indices of abundance summary table************************* -->
+<!-- ***********Indices of abundance summary table************************* -->
   
   
-  ```{r, results = 'asis'}
+```{r, results = 'asis'}
 # Commercial CPUE Index First
 names = "Fishery" #unique(mod1$cpue$FleetName)
 survey.list = list()
@@ -675,47 +710,47 @@ print(Index_summary.table,
 
 
 <!-- ====================================================================== --> 
-  <!-- ******************START BIOLOGICAL DATA TABLES************************ --> 
-  <!-- ====================================================================== --> 
+<!-- ******************START BIOLOGICAL DATA TABLES************************ --> 
+<!-- ====================================================================== --> 
   
   
   
   
-  <!-- ********************************************************************** -->
-  <!-- ***********************Weight-length TABLES*************************** --> 
-  <!-- ********************************************************************** -->
+<!-- ********************************************************************** -->
+<!-- ***********************Weight-length TABLES*************************** --> 
+<!-- ********************************************************************** -->
   
   
   
   
-  <!-- ********************************************************************** --> 
-  <!-- ******************Maturity and Fecundity TABLES*********************** --> 
-  <!-- ********************************************************************** --> 
-  
-  
-  
-  
-  
-  <!-- ********************************************************************** -->
-  <!-- **********************Age Structure TABLES**************************** --> 
-  <!-- ********************************************************************** -->
+<!-- ********************************************************************** --> 
+<!-- ******************Maturity and Fecundity TABLES*********************** --> 
+<!-- ********************************************************************** --> 
   
   
   
   
   
+<!-- ********************************************************************** -->
+<!-- **********************Age Structure TABLES**************************** --> 
+<!-- ********************************************************************** -->
   
-  \FloatBarrier
+  
+  
+  
+  
+  
+\FloatBarrier
 
 <!-- ====================================================================== -->
-  <!-- ********************BASE-CASE MODEL 1 TABLES************************** --> 
-  <!-- **REPEAT THIS SECTION AND EDIT AS NEEDED IF YOU HAVE MULTIPLE MODELS** --> 
-  <!-- ====================================================================== -->
+<!-- ********************BASE-CASE MODEL 1 TABLES************************** --> 
+<!-- **REPEAT THIS SECTION AND EDIT AS NEEDED IF YOU HAVE MULTIPLE MODELS** --> 
+<!-- ====================================================================== -->
   
   
   
-  <!-- ***********MODEL 1 PARAMETERS***************************************** --> 
-  \begin{landscape}
+<!-- ***********MODEL 1 PARAMETERS***************************************** --> 
+\begin{landscape}
 ```{r, results='asis'}
 mod_params = mod1$parameters[-c(grep('Recr',mod1$parameters$Label),
                                 grep('Impl',mod1$parameters$Label)),
@@ -816,10 +851,10 @@ print(mod_params.table,
 <!-- ---------------------------------------------------------------------- -->
   
   
-  \newpage
+\newpage
 
 <!-- ***********JITTER TABLE*********************************************** --> 
-  ```{r, results = 'asis'}
+```{r, results = 'asis'}
 # Replace values in file and read in - values for all models in 1 table  
 jitter = read.csv('./txt_files/JitterTable.csv')  
 
@@ -844,7 +879,7 @@ print(jitter.table,
 
 \newpage
 <!-- ***********MODEL 1 SENSITIVITY TABLE(S)******************************* --> 
-  ```{r, results = 'asis'}
+```{r, results = 'asis'}
 
 # Read in/organize sensitivity file, change column names, caption
 Sens_model1 = read.csv('./txt_files/Sensitivities_model1.csv')
@@ -890,9 +925,9 @@ print(Sens_model1.table,
 <!-- ---------------------------------------------------------------------- -->
   
   
-  \newpage
+\newpage
 <!-- ***********MODEL 1 REFERENCE POINTS TIME SERIES TABLE***************** --> 
-  ```{r}
+```{r}
 
 
 # Total biomass, extract and subset
@@ -989,6 +1024,7 @@ Timeseries$Year = as.factor(Timeseries$Year)
 Timeseries[nrow(Timeseries), c((ncol(Timeseries) - 2):ncol(Timeseries))] <- NA
 ```
 
+
 ```{r}
 # WORKING TIME-SERIES TABLE TO INCORPORATE THE FORECAST PERIOD
 
@@ -1071,10 +1107,10 @@ print(Timeseries.table,
 ```
 <!-- ---------------------------------------------------------------------- -->
   
-  \FloatBarrier
+\FloatBarrier
 
 <!-- ***********MODEL 1 HARVEST PROJECTIONS TABLE************************** --> 
-  \newpage
+\newpage
 ```{r, results = 'asis'}
 # Pull OFL contribution and subset years
 OFLcatch = mod1$derived_quants[grep('OFLCatch', mod1$derived_quants$LABEL), ]
@@ -1144,25 +1180,25 @@ print(Forecast_mod1.table,
       caption.placement = 'top')
 ```
 <!-- ---------------------------------------------------------------------- -->
-  \FloatBarrier
+\FloatBarrier
 
 
 <!-- ********************************************************************** -->
-  <!-- ************************MODEL 2 TABLES******************************** --> 
-  <!-- ********************************************************************** -->
+<!-- ************************MODEL 2 TABLES******************************** --> 
+<!-- ********************************************************************** -->
   
   
   
-  <!-- ********************************************************************** -->
-  <!-- ************************MODEL 3 TABLES******************************** --> 
-  <!-- ********************************************************************** -->
+<!-- ********************************************************************** -->
+<!-- ************************MODEL 3 TABLES******************************** --> 
+<!-- ********************************************************************** -->
   
   
   
-  <!-- ====================================================================== --> 
-  <!-- *************************          *********************************** --> 
-  <!-- *************************END TABLES*********************************** --> 
-  <!-- *************************          *********************************** --> 
-  <!-- ====================================================================== --> 
+<!-- ====================================================================== --> 
+<!-- *************************          *********************************** --> 
+<!-- *************************END TABLES*********************************** --> 
+<!-- *************************          *********************************** --> 
+<!-- ====================================================================== --> 
   
   
