--- a/header.tex
+++ b/header.tex
@@ -3,6 +3,7 @@
 \usepackage{tabularx}                                             % table environment providing flexibility
 \usepackage{caption}                                              % for creating captions  
 \usepackage{longtable}                                            % allows tables to span multiple pages
+\usepackage{tabu}
 \usepackage{rotating}                                             % allows for sideways tables
 %\usepackage{float}                                                % floating environments; may not need in rmarkdown
 \usepackage{placeins}                                             % keeps floats from moving
