Finalized Regulation Table

--- a/1_Introduction.Rmd
+++ b/1_Introduction.Rmd
@@ -31,12 +31,10 @@ and `r spp` stocks were considered to be severely depleted throughout the Oregon
 [@gunderson_population_1977; @gunderson_status_1977]. Landed harvest averaged 1,350 mt over the period 1977-94. 
 Landings have continued to decline since 1994, primarily due to more restrictive management.
 
-Prior to 1977, `r spp` in the northeast Pacific were managed by the Canadian Government in its waters and by the individual states in waters off of the United States. With implementation of the Magnuson Fishery Conservation and Management Act (MFCMA) in 1977, U.S. territorial waters were extended to 200 miles from shore, and primary responsibility for management of the groundfish stocks off Washington, Oregon and California shifted from the states to the Pacific Fishery Management Council (PFMC) and the National Marine Fisheries Service (NMFS). At that time, however, a Fishery Management Plan (FMP) for the west coast groundfish stocks had not yet been approved. In the interim, the state agencies worked with the PFMC to address conservation issues. In 1981, the PFMC adopted a management strategy to rebuild the depleted Pacific ocean perch stocks to levels that would produce Maximum Sustainable Yield (MSY) within 20 years. On the basis of cohort analysis [@gunderson_results_1978],  the PFMC set Acceptable Biological Catch (ABC) levels at 600 mt for the US portion of the Vancouver INPFC area and 950 mt for the Columbia INPFC area. To implement this strategy, the states of Oregon and Washington each established landing limits for Pacific ocean perch. Trawl trip limits of various forms remained in effect through 2010 (\hl{Table 1}).
+Prior to 1977, `r spp` in the northeast Pacific were managed by the Canadian Government in its waters and by the individual states in waters off of the United States. With implementation of the Magnuson Fishery Conservation and Management Act (MFCMA) in 1977, U.S. territorial waters were extended to 200 miles from shore, and primary responsibility for management of the groundfish stocks off Washington, Oregon and California shifted from the states to the Pacific Fishery Management Council (PFMC) and the National Marine Fisheries Service (NMFS). At that time, however, a Fishery Management Plan (FMP) for the west coast groundfish stocks had not yet been approved. In the interim, the state agencies worked with the PFMC to address conservation issues. In 1981, the PFMC adopted a management strategy to rebuild the depleted Pacific ocean perch stocks to levels that would produce Maximum Sustainable Yield (MSY) within 20 years. On the basis of cohort analysis [@gunderson_results_1978],  the PFMC set Acceptable Biological Catch (ABC) levels at 600 mt for the US portion of the Vancouver INPFC area and 950 mt for the Columbia INPFC area. To implement this strategy, the states of Oregon and Washington each established landing limits for Pacific ocean perch. Trawl trip limits of various forms remained in effect through 2010 (Table \ref{tab:Regs}).
 
 Age estimates for `r spp` prior to the 1980s were made via surface ageing of otoliths, which misses the very tight annuli at the edge of the otolith once the fish reaches near maximum size. Ages are biased by around age 10-12, and maximum age was estimated to be in the 20s, which lead to an overestimate of the natural mortality rate and the productivity of the stock. Using break and burn methods, `r spp` have been aged to over 100 years, and we now know that the underlying assumptions of the early models were overly optimistic about productivity. Research surveys have been used to provide fishery-independent information about the abundance, distribution, and biological characteristics of `r spp`. A coast-wide survey of the rockfish resource was conducted in 1977 [@gunderson_distribution_1980] and was repeated every three years through 2004 (referred to as the 'Triennial Survey'). The National Marine Fisheries Service (NMFS) coordinated a cooperative research survey of the `r spp` stocks off Washington and Oregon with the Washington Department of Fisheries (WDFW) and the Oregon Department of Fish and Wildlife (ODFW) in March-May 1979 [@wilkins_condition_1983]. This survey was repeated in 1985 (referred to as the `r spp` Survey). Two slope surveys have been conducted on the West Coast in recent years, one using the research vessel Miller Freeman, which ended in 2001 (referred to as the 'AFSC Slope Survey'), and another ongoing cooperative survey using commercial fishing vessels which began in 1998 as a DTS (Dover sole, thornyhead and sablefish) survey, was expanded to other groundfish in 1999 (referred to as the 'NWFSC Slope Survey'). In 2003, this survey was expanded spatially to include the shelf. This last survey, conducted by the NWFSC, continues to cover depths from 30-700 fathoms (55-1280 meters) on an annual basis (referred to as the 'NWFSC shelf-slope Survey').
 
-##Map
-A map showing the scope of the assessment and depicting boundaries for fisheries or  data collection strata is provided in Figure \ref{fig:boundary_map}.
 
 ##Life History and Ecosystem Considerations
 \hl{Include: Ecosystem considerations (e.g., ecosystem role and trophic relationships of  the species, habitat requirements/preferences, relevant data on ecosystem processes  that may affect stock or parameters used in the stock assessment, and/or cross-FMP  interactions with other fisheries). This section should note if environmental  correlations or food web interactions were incorporated into the assessment model.  The length and depth of this section would depend on availability of data and reports  from the IEA, expertise of the STAT, and whether ecosystem factors are informational  to contribute quantitative information to the assessment.}
