--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -189,7 +189,7 @@ represent any agency determination or policy.
 
 \pagenumbering{arabic} \setcounter{page}{1}
 \renewcommand{\thefigure}{\alph{figure}}
-\renewcommand{\thetable}{\alph{table}}
+???\renewcommand{\thetable}{\alph{table}}
 
 \section*{Executive Summary}\label{executive-summary}
 \addcontentsline{toc}{section}{Executive Summary}
@@ -807,7 +807,8 @@ PFMC set Acceptable Biological Catch (ABC) levels at 600 mt for the US
 portion of the Vancouver INPFC area and 950 mt for the Columbia INPFC
 area. To implement this strategy, the states of Oregon and Washington
 each established landing limits for Pacific ocean perch. Trawl trip
-limits of various forms remained in effect through 2010 (\hl{Table 1}).
+limits of various forms remained in effect through 2010
+(\ref{tab:Regs}).
 
 Age estimates for Pacific ocean perch prior to the 1980s were made via
 surface ageing of otoliths, which misses the very tight annuli at the
@@ -1512,7 +1513,8 @@ undergoing review.
 \centering
 \caption{West Coast history of regulations.} 
 \label{tab:Regs}
-\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\raggedright}p{4.25in}}
+\begingroup\fontsize{9pt}{10pt}\selectfont
+\begin{tabular}{>{\centering}p{.60in}>{\centering}p{1.0in}>{\raggedright}p{4.20in}}
   \hline
 Date & Area & Regulation \\ 
   \hline
@@ -1537,7 +1539,17 @@ Date & Area & Regulation \\
   1/1/1990 &  ALL  &  Established the coastwide Pacific ocean perch trip limit at 20\% (by weight) of all fish on board or 3,000 pounds whichever is less; landings of Pacific ocean perch be unrestricted if less than 1,000 pounds regardless of percentage on board.  (Vancouver area OY = 500 mt; Columbia area OY = 1,040 mt). \\ 
   1/1/1991 &  ALL  &  Established the coastwide Pacific ocean perch trip limit at 20\% (by weight) of all groundfish on board or 3,000 pounds whichever is less; landings of Pacific ocean perch be unrestricted if less than 1,000 pounds regardless of percentage on board (harvest guideline for combined Vancouver and Columbia areas = 1,000 mt). \\ 
   1/1/1992 &  ALL  &  For Pacific ocean perch, established the coastwide trip limit at 20\% (by weight) of all groundfish on board or 3,000 pounds whichever is less; landings of Pacific ocean perch be unrestricted if less than 1,000 pounds regardless of percentage on board (harvest guideline for combined Vancouver and Columbia areas = 1,550 mt). \\ 
-  1/1/1993 &  Cape Mendocino Coos Bay  &  For Pacific ocean perch, continued the coastwide trip limit at 20\% (by weight) of all groundfish on board or 3,000 pounds whichever is less; landings of Pacific ocean perch unrestricted if less than 1,000 pounds regardless of percentage on board (harvest guideline for combined Vancouver and Columbia areas = 1,550 mt). \\ 
+   \hline
+\end{tabular}
+\endgroup
+\end{table}\begin{table}[ht]
+\centering
+\begingroup\fontsize{9pt}{10pt}\selectfont
+\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\raggedright}p{4.25in}}
+  \hline
+Date & Area & Regulation \\ 
+  \hline
+1/1/1993 &  Cape Mendocino Coos Bay  &  For Pacific ocean perch, continued the coastwide trip limit at 20\% (by weight) of all groundfish on board or 3,000 pounds whichever is less; landings of Pacific ocean perch unrestricted if less than 1,000 pounds regardless of percentage on board (harvest guideline for combined Vancouver and Columbia areas = 1,550 mt). \\ 
   1/1/1994 &  ALL  &  Pacific Ocean Perch trip limit of 3,000 pounds or 20\% of all fish on board, whichever is less, in landings of Pacific ocean perch above 1,000 pounds. \\ 
   1/1/1995 &  ALL  &  For Pacific Ocean Perch, established a cumulative trip limit of 6,000 pounds per month \\ 
   1/1/1996 &  ALL  &  Pacific Ocean Perch cumulative trip limit of 10,000 pounds per two-month period. \\ 
@@ -1570,7 +1582,17 @@ Date & Area & Regulation \\
   11/1/2002 &  4010 North  &  Pacific Ocean Perch, limited entry fixed gear, 2000 lbs per month \\ 
   11/1/2002 &  4010 North  &  Pacific Ocean Perch, limited entry trawl, 2000 lbs per month \\ 
   1/1/2003 &  3800 South  &  minor slope rockfish south including pacific ocean perch, open access gear, 10000 lbs per 2 months \\ 
-  1/1/2003 &  3800 South  &  Minor slope rockfish south including Pacific ocean perch, limited entry fixed gear, 30000 lbs per 2 months \\ 
+   \hline
+\end{tabular}
+\endgroup
+\end{table}\begin{table}[ht]
+\centering
+\begingroup\fontsize{9pt}{10pt}\selectfont
+\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\raggedright}p{4.25in}}
+  \hline
+Date & Area & Regulation \\ 
+  \hline
+1/1/2003 &  3800 South  &  Minor slope rockfish south including Pacific ocean perch, limited entry fixed gear, 30000 lbs per 2 months \\ 
   1/1/2003 &  3800 South  &  Minor slope rockfish south including Pacific ocean perch , limited entry trawl, 30000 lbs per 2 months \\ 
   1/1/2003 &  3800 4010  &  minor slope rockfish south including pacific ocean perch, open access gear, per trip no more than 25\% (by weight) of sablefish landed \\ 
   1/1/2003 &  3800 4010  &  Minor slope rockfish south including Pacific ocean perch, limited entry fixed gear, 1800 lbs per 2 months \\ 
@@ -1606,40 +1628,17 @@ Date & Area & Regulation \\
   1/1/2005 &  4010 North  &  pacific ocean perch, limited entry fixed gear, 1800 lbs per 2 months \\ 
   1/1/2005 &  4010 South  &  minor slope rockfish south including darkblotched and pacific ocean perch, limited entry fixed gear, 40000 lbs per 2 months \\ 
   5/1/2005 &  3800 4010  &  minor slope rockfish south including darkblotched rockfish and pacific ocean perch, limited entry trawl, 8000 lbs per 2 months \\ 
-  7/1/2005 &  3800 4010  &  minor slope south rockfish including darkblotched rockfish and pacific ocean perch, limited entry trawl, 20000 lbs per 2 months \\ 
-  9/1/2005 &  3800 4010  &  minor slope south rockfish including darkblotched rockfish and pacific ocean perch, limited entry trawl, 8000 lbs per 2 months \\ 
-  12/1/2005 &  3800 South  &  minor slope rockfish south including darkblotched rockfish and pacific ocean perch, limited entry trawl, closed \\ 
-  12/1/2005 &  3800 4010  &  minor slope south rockfish including darkblotched rockfish and pacific ocean perch, limited entry trawl, 8000 lbs per 2 months \\ 
-  1/1/2006 &  3800 South  &  minor slope rockfish south including pacific ocean perch and darkblotched, open access gear, 10000 lbs per 2 months \\ 
-  1/1/2006 &  3800 South  &  minor slope rockfish south including pacific ocean perch and darkblotched rockfish, limited entry trawl, 20000 lbs per month \\ 
-  1/1/2006 &  3800 4010  &  minor slope rockfish south including pacific ocean perch and darkblotched, open access gear, per trip, no more than 25\% (by weight) of landed sablefish \\ 
-  1/1/2006 &  3800 4010  &  minor slope rockfish south including pacific ocean perch and darkblotched rockfish, limited entry trawl, 4000 lbs per month \\ 
-  1/1/2006 &  4010 North  &  pacific ocean perch, open access gear, 100 lbs per month \\ 
-  1/1/2006 &  4010 North  &  pacific ocean perch, limited entry fixed gear, 1800 lbs per 2 months \\ 
-  1/1/2006 &  4010 North  &  pacific ocean perch, limited entry trawl, 1500 lbs per month \\ 
-  1/1/2006 &  4010 South  &  minor slope rockfish south including pacific ocean perch and darkblotched rockfish, limited entry fixed gear, 40000 lbs per 2 months \\ 
-  3/1/2006 &  3800 South  &  minor slope rockfish south including pacific ocean perch and darkblotched rockfish, limited entry trawl, 40000 lbs per 2 months \\ 
-  3/1/2006 &  3800 4010  &  minor slope rockfish south including pacific ocean perch and darkblotched rockfish, limited entry trawl, 8000 lbs per 2 months \\ 
-  3/1/2006 &  4010 North  &  pacific ocean perch, limited entry trawl, 3000 lbs per 2 months \\ 
-  7/1/2006 &  3800 4010  &  minor slope rockfish south including pacific ocean perch and darkblotched rockfish, limited entry trawl, 1000 lbs per 2 months \\ 
-  1/1/2007 &  4010 North  &  pacific ocean perch, limited entry fixed gear, 1800 lbs per 2 months \\ 
-  1/1/2007 &  4010 South  &  minor slope rockfish south including pacific ocean perch and darkblotched, limited entry fixed gear, 40000 lbs per 2 months \\ 
-  1/1/2007 &  3800 4010  &  minor slope rockfish south including pacific ocean perch and darkblotched rockfish, open access gear,  per trip no more than 25\% (by weight) of sablefish landed \\ 
-  1/1/2007 &  4010 North  &  pacific ocean perch, open access gears, 100 lbs per month \\ 
-  1/1/2007 &  3800 South  &  minor slope rockfish south including pacific ocean perch and darkblotched rockfish, limited entry trawl, 40000 lbs per 2 months \\ 
-  1/1/2007 &  3800 4010  &  minor slope rockfish south including pacific ocean perch and darkblotched rockfish, limited entry trawl, 15000 lbs per 2 months \\ 
-  1/1/2007 &  4010 North  &  pacific ocean perch, limited entry trawl, 3000 lbs per 2 months \\ 
-  7/1/2007 &  3800 4010  &  minor slope rockfish south including pacific ocean perch and darkblotched rockfish, limited entry trawl, 10000 lbs per 2 months \\ 
-  8/1/2007 &  3800 South  &  minor slope rockfish south including pacific ocean perch and darkblotched rockfish, open access gear, 10000 lbs per 2 months \\ 
-  9/1/2007 &  3800 South  &  minor slope rockfish south including pacific ocean perch and darkblotched rockfish, limited entry trawl, 55000 lbs per 2 months \\ 
-  11/1/2007 &  3800 4010  &  minor slope rockfish south including pacific ocean perch and darkblotched rockfish, limited entry trawl, 15000 lbs per 2 months \\ 
-  1/1/2008 &  4010 North  &  pacific ocean perch, limited entry fixed gear, 1800 lbs per 2 months \\ 
-  1/1/2008 &  4010 South  &  minor slope rockfish south including pacific ocean perch and darkblotched,limited  entry fixed gear, 40000 lbs per 2 months \\ 
-  1/1/2008 &  3800 South  &  minor slope rockfish south including pacific ocean perch and darkblotched rockfish, open access gear, 10000 lbs per 2 months \\ 
-  1/1/2008 &  3800 4010  &  minor slope rockfish south including pacific ocean perch and darkblotched rockfish, open access gear,  per trip no more than 25\% (by weight) of sablefish landed \\ 
-  1/1/2008 &  4010 North  &  pacific ocean perch, open access gears, 100 lbs per month \\ 
-  1/1/2008 &  3800 South  &  minor slope rockfish south including pacific ocean perch and darkblotched rockfish, limited entry trawl, 55000 lbs per 2 months \\ 
-  1/1/2008 &  3800 4010  &  minor slope rockfish south including pacific ocean perch and darkblotched rockfish, limited entry trawl, 15000 lbs per 2 months \\ 
+   \hline
+\end{tabular}
+\endgroup
+\end{table}\begin{table}[ht]
+\centering
+\begingroup\fontsize{9pt}{10pt}\selectfont
+\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\raggedright}p{4.25in}}
+  \hline
+Date & Area & Regulation \\ 
+  \hline
+1/1/2008 &  3800 4010  &  minor slope rockfish south including pacific ocean perch and darkblotched rockfish, limited entry trawl, 15000 lbs per 2 months \\ 
   1/1/2008 &  4010 North  &  pacific ocean perch, limited entry trawl, 1500 lbs per 2 months \\ 
   1/1/2009 &  4010 North  &  pacific ocean perch, limited entry fixed gear, 1800 lbs per 2 months \\ 
   1/1/2009 &  4010 South  &  minor slope rockfish south including pacific ocean perch and darkblotched, limited entry fixed gear, 40000 lbs per 2 months \\ 
@@ -1676,7 +1675,17 @@ Date & Area & Regulation \\
   1/1/2013 &  4010 South  &  minor slope rockfish south including pacific ocean perch and darkblotched rockfish, open access gear,  10000 lbs per 2 months no more than 475 lbs of which may be blackgill rockfish \\ 
   1/1/2014 &  4010 North  &  non-trawl, limited entry, pacific ocean perch, 1800 lbs per 2 months \\ 
   1/1/2014 &  4010 South  &  non-trawl, limited entry, minor slope rockfish and darkblotched rockfish and pacific ocean perch, 40000 lbs per 2 months of which no more than 1375 lbs may be blackgill rockfish \\ 
-  1/1/2014 &  4010 North  &  non-trawl, open access, pacific ocean perch, 100 lbs per month \\ 
+   \hline
+\end{tabular}
+\endgroup
+\end{table}\begin{table}[ht]
+\centering
+\begingroup\fontsize{9pt}{10pt}\selectfont
+\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\raggedright}p{4.25in}}
+  \hline
+Date & Area & Regulation \\ 
+  \hline
+1/1/2014 &  4010 North  &  non-trawl, open access, pacific ocean perch, 100 lbs per month \\ 
   1/1/2014 &  4010 South  &  non-trawl, open access, minor slope rockfish including darkblotched rockfishand pacific ocean perch, 10000 lbs per 2 months of which no more than 475 lbs may be blackgill rockfish \\ 
   1/1/2015 &  4010 North  &  non-trawl, limited entry, pacific ocean perch, 1800 lbs per 2 months \\ 
   1/1/2015 &  4010 South  &  non-trawl, limited entry, minor slope rockfish and darkblotched rockfish and pacific ocean perch, 40000 lbs per 2 months of which no more than 1375 lbs may be blackgill rockfish \\ 
@@ -1690,6 +1699,7 @@ Date & Area & Regulation \\
   7/1/2016 &  4010 South  &  non-trawl, open access, minor slope rockfish including darkblotched rockfishand pacific ocean perch, 10000 lbs per 2 months of which no more than 550 lbs may be blackgill rockfish \\ 
    \hline
 \end{tabular}
+\endgroup
 \end{table}
 
 \begin{table}[ht]
@@ -1853,14 +1863,14 @@ Year & California & Oregon & Washington & At-Sea Hake & Foreign & Research \\
 \centering
 \caption{Summary of discard rates used in the model by each data source.} 
 \label{tab:Discard}
-\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1.1in}}
+\begin{tabular}{>{\centering}p{.75in}>{\centering}p{1.1in}>{\centering}p{.75in}>{\centering}p{1.1in}}
   \hline
 Year & Source & Discard & Standard Error \\ 
   \hline
 1985 & Pikitch & 0.027 & 0.068 \\ 
   1986 & Pikitch & 0.024 & 0.063 \\ 
-  1987 & WCGOP & 0.039 & 0.083 \\ 
-  1992 & WCGOP & 0.100 & 0.300 \\ 
+  1987 & Pikitch & 0.039 & 0.083 \\ 
+  1992 & Management Restrictions & 0.100 & 0.300 \\ 
   2002 & WCGOP & 0.150 & 0.164 \\ 
   2003 & WCGOP & 0.183 & 0.268 \\ 
   2004 & WCGOP & 0.203 & 0.206 \\ 
